--- a/index.html
+++ b/index.html
@@ -262,7 +262,12 @@
     <section id="about">
         <div class="content">
             <h2>About Me</h2>
-            <p>I'm a data analyst with 5+ years of experience in transforming raw data into actionable business insights. I specialize in Python, SQL, and visualization tools like Tableau and Power BI. When not analyzing data, I enjoy hiking and reading sci-fi novels.</p>
+            <p>Detail-oriented and highly skilled Data Analyst with experience in interpreting and analyzing data to drive successful business
+solutions. Expertise in data collection, cleaning, and visualization using tools such as Excel, Spreadsheets. Strong
+background in statistical analysis and data modeling, with a proven ability to identify trends, forecast outcomes, and provide
+actionable insights to enhance decision-making. Adept at working with large datasets and transforming complex information
+into clear, concise reports for cross-functional teams. Excellent problem-solving and communication skills with a passion for
+optimizing processes and improving business performance.</p>
         </div>
     </section>
 
@@ -403,4 +408,5 @@
         });
     </script>
 </body>
+
 </html>
